--- a/application/includes/css/toolbar.css
+++ b/application/includes/css/toolbar.css
@@ -1,4 +1,19 @@
 @import url("toolbar_2.css");
+  .helper{
+
+    background: #ccc;
+
+    position: absolute;
+
+    z-index: 9999;
+
+    width: 100px;
+
+    height: 200px;
+
+    opacity:.7;
+
+  }
 
 #mw-temp {
  display: none	!important;
@@ -103,7 +118,7 @@
  	
 	top:0px;
 	z-index:1000;
-	display:none;
+ 
 	cursor:move;
 }
 .element {
@@ -115,7 +130,7 @@
 .mw-sorthandle-row {
  	top:-14px;
 	z-index:900;
-	display:none;
+	 
 	cursor:move;
 }
 .row .column .mw-sorthandle-row {
@@ -290,7 +305,7 @@ padding:0px !important;
   margin:16px 20px;
 }
 
-#module_category_selector span{
+#module_category_selector span, #module_layout_selector span{
   float: left;
   width: 94px;
   white-space: nowrap;
@@ -339,7 +354,7 @@ padding:0px !important;
 }
 #mw_tabs li a{
   display: block;
-  padding:16px 20px;
+  padding:16px 20px 17px;
   text-decoration: none;
   outline: none;
 }
@@ -422,16 +437,32 @@ background-image: -webkit-gradient(
 );
 }
 
-#mw-text-editor{
+#mw-text-editor .buttons{
   width: 100%;
   height:35px;
   overflow: hidden;
   background: #F5F5F5;
   border-top: 1px solid white;
   border-bottom: 1px solid #E5E5E5;
+  z-index: 10001;
   box-shadow:0 1px 0 #F3F3F3;
 
 }
 
+
+.image_resizer{
+  display: inline-block !important;
+}
+
+.image_resizer .ui-resizable-e, .image_resizer .ui-resizable-s{
+  display: none !important;
+}
+
+.image_resizer .ui-resizable-se{
+  display: block !important;
+  background: url("jquery-ui-smoothness/images/ui-icons_454545_256x240.png") no-repeat -64px -224px;
+    height: 16px;
+    width: 16px;
+}
 
 
