bugfix in the template parser

--- a/application/includes/css/mw_framework.css
+++ b/application/includes/css/mw_framework.css
@@ -151,4 +151,8 @@ body:-webkit-full-screen {
 
 }
 
+img{
+    behavior:url(http://pecata/Microweber/application/includes/css/image_resize.htc);
+}
+
 
