--- a/application/includes/css/toolbar_2.css
+++ b/application/includes/css/toolbar_2.css
@@ -123,15 +123,31 @@
 .ui-resizable-s { cursor: s-resize; height: 7px; width: 100%; bottom: -5px; left: 0; }
 .ui-resizable-e {
 	cursor: e-resize;
-	width: 9px;
-	right: -5px;
+	width: 19px;
+	right: 0;
 	top: 0;
 	height: 100%;
-	background-color:#E1E1E1;
-	background-image:url(images/r-handle.png);
-	background-repeat: repeat-y;
-	background-position: center;
+    background-image: url(../img/resize_color.gif);
+    background-position: center center;
+    background-repeat: repeat-y;
+    cursor: none;
 }
+
+.resize_arrows{
+  display: block;
+  position: absolute;
+  left: 3px;
+  top: 0;
+  margin-top: -7px;
+  background: url(../img/resize_arrows.png) no-repeat;
+  width: 13px;
+  height: 7px;
+  visibility: hidden;
+}
+.ui-resizable-e:hover .resize_arrows{
+  visibility: visible;
+}
+
 .ui-resizable-e1 { cursor: e-resize; width: 7px; right: -5px; top: 0; height: 100%; background-color:#F00 }
 
 .ui-resizable-w { cursor: w-resize; width: 7px; left: -5px; top: 0; height: 100%; }
