--- a/application/includes/css/toolbar_2.css
+++ b/application/includes/css/toolbar_2.css
@@ -127,7 +127,7 @@
 	top: 0;
 	height: 100%;
     background-image: url(../img/resize_color.gif);
-    background-position: center center;
+    background-position: right center;
     background-repeat: repeat-y;
     cursor: none;
 }
@@ -136,6 +136,7 @@
   display: block;
   position: absolute;
   left: 3px;
+  left: 12px;
   top: 0;
   margin-top: -7px;
   background: url(../img/resize_arrows.png) no-repeat;
