--- a/application/includes/css/mw_framework.css
+++ b/application/includes/css/mw_framework.css
@@ -139,8 +139,8 @@ body:-webkit-full-screen {
 .mw_modal{
   position: fixed;
   z-index: 10001;
-  top:50%;
-  left: 50%;
+  top:0;
+  left: 0;
   display: none;
   background: white;
   border:1px solid #C4C4C4;
@@ -148,7 +148,26 @@ body:-webkit-full-screen {
 }
 .mw_modal_container{
   padding: 15px;
+  overflow-y:auto;
+  overflow-x:hidden;
 
+}
+.mw_modal_toolbar{
+  height: 22px;
+  width:100%;
+  top: -1px;
+  left: -1px;
+  cursor: move;
+  position: relative;
+  border: 1px solid #4584AC;
+  background-image: url(../img/popup_settings_bar.png), -ms-linear-gradient(top, #8CC7ED 0%, #5398C5 100%);
+  background-image: url(../img/popup_settings_bar.png), -moz-linear-gradient(top, #8CC7ED 0%, #5398C5 100%);
+  background-image: url(../img/popup_settings_bar.png), -o-linear-gradient(top, #8CC7ED 0%, #5398C5 100%);
+  background-image: url(../img/popup_settings_bar.png), -webkit-gradient(linear, left top, left bottom, color-stop(0, #8CC7ED), color-stop(1, #5398C5));
+  background-image: url(../img/popup_settings_bar.png), -webkit-linear-gradient(top, #8CC7ED 0%, #5398C5 100%);
+  background-image: url(../img/popup_settings_bar.png), linear-gradient(to bottom, #8CC7ED 0%, #5398C5 100%);
+  background-repeat: no-repeat, repeat;
+  background-position: center center;
 }
 
 .empty-element{
@@ -157,6 +176,22 @@ body:-webkit-full-screen {
   display: block;
   position: relative;
   width: 100%;
+}
+
+.absolute-dropable{
+  z-index: 9999999;
+}
+
+.row{
+  margin-top: 30px;
+}
+.dropable_supporter{
+  position: absolute;
+  height: 30px;
+  z-index: 99999;
+  top:0;
+  left: 0;
+  visibility: hidden;
 }
 
 
