--- a/application/includes/css/mw_framework.css
+++ b/application/includes/css/mw_framework.css
@@ -37,7 +37,7 @@ body:-webkit-full-screen {
   display: inline-block;
   position: relative;
   cursor: pointer;
-  z-index: 10002;
+  z-index: 10;
 }
   .mw_dropdown_fields{
     position: absolute;
@@ -110,7 +110,7 @@ body:-webkit-full-screen {
 .mw_image_settings{
   position: absolute;
   overflow: hidden;
-  z-index: 9999;
+  z-index: 2;
 }
 
 .image_close{
@@ -138,7 +138,7 @@ body:-webkit-full-screen {
 
 .mw_modal{
   position: fixed;
-  z-index: 10001;
+  z-index: 999;
   top:0;
   left: 0;
   display: none;
@@ -212,21 +212,13 @@ body:-webkit-full-screen {
 }
 
 .absolute-dropable{
-  z-index: 9999999;
+  z-index: 998;
 }
 
 .row{
   margin-top: 30px;
 }
-.dropable_supporter{
-  position: absolute;
-  height: 30px;
-  z-index: 99999;
-  top:0;
-  left: 0;
-  visibility: hidden;
 
-}
 .mw_dropable{
     position: absolute !important;
     box-shadow:1px 1px 1px black;
@@ -254,6 +246,17 @@ body:-webkit-full-screen {
 
 .currentDragMouseOver{
   outline: dotted 3px #B7E7F7;
+}
+
+.edit, .column{
+  min-height: 50px;
+}
+
+.ui-draggable-dragging{
+  z-index: 999;
+}
+.ui-resizable-e{
+  z-index: 5 !important;
 }
 
 
