--- a/application/includes/css/mw_framework.css
+++ b/application/includes/css/mw_framework.css
@@ -259,5 +259,15 @@ body:-webkit-full-screen {
   z-index: 5 !important;
 }
 
+.column {
+	float:left !important;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+.row{
+  margin-top: 40px !important;
+}
+
 
 
