--- a/application/includes/css/mw_framework.css
+++ b/application/includes/css/mw_framework.css
@@ -279,7 +279,7 @@ body:-webkit-full-screen {
   visibility: visible;
 }
 
-.mw_image_resizer .ui-resizable-handle { position: absolute;font-size: 0.1px; display: block; background-image: url(../img/resize.gif);}
+.mw_image_resizer .ui-resizable-handle { position: absolute;font-size: 0.1px; display: block; background-image: url(../img/resize.gif);opacity:0.4}
 .mw_image_resizer .ui-resizable-disabled .ui-resizable-handle, .ui-resizable-autohide .ui-resizable-handle { display: none; }
 
 .mw_image_resizer .ui-resizable-n { cursor: n-resize; height: 1px; width: 100%; top: -1px; left: 0; background-repeat: repeat-x;}
@@ -296,6 +296,58 @@ body:-webkit-full-screen {
     background: #333;
     border: 1px solid #EEEEEE;
     opacity:0.6;
+}
+
+
+.mw_edit_btn{
+  display: inline-block;
+  padding: 3px 6px;
+  font-size: 11px;
+  color: #5B5B5B;
+  text-decoration: none;
+  text-align: center;
+  cursor: pointer;
+  border: 1px solid #D2D1D1;
+  line-height: normal;
+  -webkit-border-radius: 3px;
+-moz-border-radius: 3px;
+border-radius: 3px;
+  background-image: linear-gradient(bottom, rgb(225,225,225) 9%, rgb(245,245,245) 55%);
+background-image: -o-linear-gradient(bottom, rgb(225,225,225) 9%, rgb(245,245,245) 55%);
+background-image: -moz-linear-gradient(bottom, rgb(225,225,225) 9%, rgb(245,245,245) 55%);
+background-image: -webkit-linear-gradient(bottom, rgb(225,225,225) 9%, rgb(245,245,245) 55%);
+background-image: -ms-linear-gradient(bottom, rgb(225,225,225) 9%, rgb(245,245,245) 55%);
+
+background-image: -webkit-gradient(
+	linear,
+	left bottom,
+	left top,
+	color-stop(0.09, rgb(225,225,225)),
+	color-stop(0.55, rgb(245,245,245))
+);
+}
+
+.mw_col_delete{
+  position: absolute;
+  right: 3px;
+  top: 3px;
+}
+.mw_edit_delete{
+  height: 19px;
+  width: 21px;
+  padding: 0;
+}
+
+.mw_edit_delete span{
+  position: absolute;
+  display: block;
+  width: 8px;
+  height: 8px;
+  background: url(../img/delete_item.png) no-repeat;
+  top: 50%;
+  left: 50%;
+  margin: -4px 0 0 -4px;
+  text-indent: -9999px;
 }
 
 
