--- a/application/includes/css/toolbar.css
+++ b/application/includes/css/toolbar.css
@@ -66,7 +66,7 @@
 	left: 0px;
     top: 0;
 	border: none;
-	height:19px;
+	height:25px;
 }
 
 .mw-sorthandle-moveit{
@@ -238,7 +238,7 @@ padding:0px !important;
 }
 
 .mw-styles-list ul li{
-	width:48px !important;	
+	width:48px !important;
 	float:left !important;	
 	list-style:none !important;	
 	list-style-type:none !important;	
@@ -454,28 +454,9 @@ background-image: -webkit-gradient(
     width: 16px;
 }
 
-.mw_dropable{
-    position: relative;
-    width: 100%;
-    text-align: center;
-    color: #D0D0D0;
-    font-size: 25px;
 
-    height: 10px;
-    background: rgba(183,231,247,0.6);
-    background: rgb(183,231,247);
 
-}
-.mw_dropable:hover{
-    border-color:#B4B4B4;
-}
 
-.drop_top{
-  top: 7px;
-}
-.drop_bottom{
-  top:-7px;
-}
 .mw_drag_started, li.module-item.ui-draggable-dragging{
   padding:20px;
   background:white;
@@ -526,4 +507,8 @@ outline:1px solid #D4D4D4;
   visibility: visible;
 }
 
+
+.ui-draggable-dragging{
+  opacity:0.7;
+}
 
