bugfix in the save + more updates

--- a/application/includes/css/toolbar.css
+++ b/application/includes/css/toolbar.css
@@ -545,7 +545,8 @@ outline:1px solid #D4D4D4;
   display: block;
   position: absolute;
   right: 200px;
-  top: 20px;
+  right: 20px;
+    top: 16px;
   overflow: hidden;
   width: 58px;
   height: 17px;
