--- a/application/includes/css/mw_framework.css
+++ b/application/includes/css/mw_framework.css
@@ -42,64 +42,71 @@ body:-webkit-full-screen {
   .mw_dropdown_fields{
     position: absolute;
     z-index: 9;
-    top: 30px;
+    top: 27px;
     left: 0;
     width: 100%;
     display: none;
     padding-top: 5px;
   }
     .mw_dropdown_fields ul{
-      background: #f1f1f1;
+      background: #f1f1f1 url(../img/dropdown_fields_bottom.png) no-repeat center bottom;
+      background-size: 100% 6px;
       margin: 0;
       width: 100%;
-      box-shadow:1px 1px 1px #AAAAAA;
-      -webkit-border-radius: 7px;
-      -moz-border-radius: 7px;
-      border-radius: 7px;
+
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      border-radius: 5px;
     }
       .mw_dropdown_fields li{
           list-style: none;
       }
        .mw_dropdown_fields li a{
             display: block;
-            padding: 3px 5px 3px 12px;
-            border: 1px solid #F1F1F1;
+            padding: 4px 6px 4px 13px;
+
+            font-size: 11px;
+            color: #212121;
+            text-decoration: none !important;
        }
        .mw_dropdown_fields li:first-child a{
-          -webkit-border-top-left-radius: 7px;
-          -webkit-border-top-right-radius: 7px;
-          -moz-border-radius-topleft: 7px;
-          -moz-border-radius-topright: 7px;
-          border-top-left-radius: 7px;
-          border-top-right-radius: 7px;
+          -webkit-border-top-left-radius: 5px;
+          -webkit-border-top-right-radius: 5px;
+          -moz-border-radius-topleft: 5px;
+          -moz-border-radius-topright: 5px;
+          border-top-left-radius: 5px;
+          border-top-right-radius: 5px;
        }
        .mw_dropdown_fields li:last-child a{
-          -webkit-border-bottom-right-radius: 7px;
-          -webkit-border-bottom-left-radius: 7px;
-          -moz-border-radius-bottomright: 7px;
-          -moz-border-radius-bottomleft: 7px;
-          border-bottom-right-radius: 7px;
-          border-bottom-left-radius: 7px;
+          -webkit-border-bottom-right-radius: 5px;
+          -webkit-border-bottom-left-radius: 5px;
+          -moz-border-radius-bottomright: 5px;
+          -moz-border-radius-bottomleft: 5px;
+          border-bottom-right-radius: 5px;
+          border-bottom-left-radius: 5px;
        }
 
        .mw_dropdown_fields li a:hover{
-            border-color: #8CB2CA;
-            background-image: -ms-linear-gradient(top, #B5D8EE 0%, #9AC0D9 100%);
-            background-image: -moz-linear-gradient(top, #B5D8EE 0%, #9AC0D9 100%);
-            background-image: -o-linear-gradient(top, #B5D8EE 0%, #9AC0D9 100%);
-            background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #B5D8EE), color-stop(1, #9AC0D9));
-            background-image: -webkit-linear-gradient(top, #B5D8EE 0%, #9AC0D9 100%);
-            background-image: linear-gradient(to bottom, #B5D8EE 0%, #9AC0D9 100%);
+            border:1px solid #8CB2CA;
+            padding: 3px 5px 3px 12px;
+            background: -moz-linear-gradient(top,  #ffffff 0%, #b5d8ee 1%, #9ac0d9 100%);
+            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(1%,#b5d8ee), color-stop(100%,#9ac0d9));
+            background: -webkit-linear-gradient(top,  #ffffff 0%,#b5d8ee 1%,#9ac0d9 100%);
+            background: -o-linear-gradient(top,  #ffffff 0%,#b5d8ee 1%,#9ac0d9 100%);
+            background: -ms-linear-gradient(top,  #ffffff 0%,#b5d8ee 1%,#9ac0d9 100%);
+            background: linear-gradient(to bottom,  #ffffff 0%,#b5d8ee 1%,#9ac0d9 100%);
+
+
        }
 
     .mw_dropdown_val{
       display: inline-block;
       box-shadow:inset 0px 1px 0px #B8B8B8;
-      font-size: 12px;
+      font-size: 11px;
       border: 1px solid #DCDCDC;
       border-top: none;
       background: #F1F1F1 url(../img/dropdown.png) no-repeat right top;
-      padding: 8px 45px 7px 16px;
+      padding: 8px 39px 7px 11px;
       -webkit-border-radius: 7px;
       -moz-border-radius: 7px;
       border-radius: 7px;
