--- a/application/includes/css/mw_framework.css
+++ b/application/includes/css/mw_framework.css
@@ -53,7 +53,7 @@ body:-webkit-full-screen {
       background-size: 100% 6px;
       margin: 0;
       width: 100%;
-
+      box-shadow:1px 1px 0px #f0f0f0;
       -webkit-border-radius: 5px;
       -moz-border-radius: 5px;
       border-radius: 5px;
@@ -63,8 +63,8 @@ body:-webkit-full-screen {
       }
        .mw_dropdown_fields li a{
             display: block;
-            padding: 4px 6px 4px 13px;
-
+            padding: 5px 6px 5px 13px;
+            text-shadow:1px 1px 0px white;
             font-size: 11px;
             color: #212121;
             text-decoration: none !important;
@@ -88,7 +88,7 @@ body:-webkit-full-screen {
 
        .mw_dropdown_fields li a:hover{
             border:1px solid #8CB2CA;
-            padding: 3px 5px 3px 12px;
+            padding: 4px 5px 4px 12px;
             background: -moz-linear-gradient(top,  #ffffff 0%, #b5d8ee 1%, #9ac0d9 100%);
             background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(1%,#b5d8ee), color-stop(100%,#9ac0d9));
             background: -webkit-linear-gradient(top,  #ffffff 0%,#b5d8ee 1%,#9ac0d9 100%);
