--- a/application/includes/css/toolbar.css
+++ b/application/includes/css/toolbar.css
@@ -288,7 +288,7 @@ padding:0px !important;
     overflow: hidden;
     cursor: pointer;
     position: absolute;
-    top: -4px;
+    top: -5px;
     z-index: 2;
   }
   .modules_bar_slide_left.active, .modules_bar_slide_right.active{
@@ -350,7 +350,7 @@ background: url(../img/navbg.jpg) repeat-x;
 }
 #mw_tabs li a{
   display: block;
-  padding:18px 20px 19px;
+  padding:19px 20px 19px;
   text-decoration: none;
   outline: none;
   color: #212121;
@@ -438,7 +438,6 @@ background-image: -webkit-gradient(
 #mw-text-editor{
   width: 100%;
   height:35px;
-  overflow: hidden;
   background: #F5F5F5;
   border-top: 1px solid white;
   border-bottom: 1px solid #E5E5E5;
@@ -587,6 +586,9 @@ outline:1px solid #D4D4D4;
   text-shadow:1px 0 0 #fff;
 }
 
+
+/*  WYSIWYG  */
+
 .mw_editor{
   line-height: normal;
 }
@@ -594,13 +596,48 @@ outline:1px solid #D4D4D4;
 .mw_editor_btn{
   display: inline-block;
   cursor: pointer;
-  background-image: url(../img/editor.png);
-  background-repeat: no-repeat;
+  height: 25px;
+  padding: 1px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+}
+.editor_wrapper{
+  padding: 4px 20px;
+  overflow: hidden;
 }
 
-.mw_editor_bold{
-  background-position: -90px 0;
-  width:20px;
-  height: 27px;
+.mw_editor_btn:hover{
+  border: 1px solid #D2D2D2;
+  padding: 0;
+  background-image: linear-gradient(bottom, #E5E5E5 39%, #F3F3F3 70%);
+  background-image: -o-linear-gradient(bottom, #E5E5E5 39%, #F3F3F3 70%);
+  background-image: -moz-linear-gradient(bottom, #E5E5E5 39%, #F3F3F3 70%);
+  background-image: -webkit-linear-gradient(bottom, #E5E5E5 39%, #F3F3F3 70%);
+  background-image: -ms-linear-gradient(bottom, #E5E5E5 39%, #F3F3F3 70%);
+
+  background-image: -webkit-gradient(
+  	linear,
+  	left bottom,
+  	left top,
+  	color-stop(0.39, #E5E5E5),
+  	color-stop(0.7, #F3F3F3)
+  );
 }
+
+.mw_editor_btn .ico{
+  background-image: url(../img/editor.png);
+  background-repeat: no-repeat;
+  height: 25px;
+}
+
+.mw_editor_bold .ico{
+  background-position: -90px 0;
+  width:25px;
+  display: inline-block;
+}
+
+/*  End WYSIWYG  */
+
+
 
