--- a/application/includes/css/toolbar.css
+++ b/application/includes/css/toolbar.css
@@ -607,7 +607,7 @@ outline:1px solid #D4D4D4;
   overflow: hidden;
 }
 
-.mw_editor_btn:hover{
+.mw_editor_btn:hover, .mw_editor_btn_active{
   border: 1px solid #D2D2D2;
   padding: 0;
   background-image: linear-gradient(bottom, #E5E5E5 39%, #F3F3F3 70%);
@@ -625,17 +625,34 @@ outline:1px solid #D4D4D4;
   );
 }
 
+.mw_editor_btn_active{
+  box-shadow:inset 0 0 4px #ccc;
+}
+
+.mw_dlm{
+  height: 17px;
+  width: 1px;
+  overflow: hidden;
+  position: relative;
+  background:#D1D1D1;
+  display: inline-block;
+  top: -3px;
+}
+
 .mw_editor_btn .ico{
   background-image: url(../img/editor.png);
   background-repeat: no-repeat;
   height: 25px;
-}
-
-.mw_editor_bold .ico{
-  background-position: -90px 0;
   width:25px;
   display: inline-block;
 }
+
+.mw_editor_bold .ico{background-position: -89px 5px;}
+.mw_editor_italic .ico{background-position: -119px 5px;}
+.mw_editor_underline .ico{background-position: -150px 6px;}
+
+.mw_editor_undo .ico{background-position: -12px 4px;}
+.mw_editor_redo .ico{background-position: -42px 4px;}
 
 /*  End WYSIWYG  */
 
