--- a/application/includes/css/toolbar.css
+++ b/application/includes/css/toolbar.css
@@ -624,6 +624,24 @@ outline:1px solid #D4D4D4;
   );
 }
 
+.mw_editor_btn_mousedown, .mw_editor_btn_mousedown:hover{
+
+box-shadow:inset 0 0 3px #828282;
+background-image: linear-gradient(bottom, rgba(183,184,184, 0.5) 21%, rgba(207,207,207, 0.5) 61%);
+background-image: -o-linear-gradient(bottom, rgba(183,184,184, 0.5) 21%, rgba(207,207,207, 0.5) 61%);
+background-image: -moz-linear-gradient(bottom, rgba(183,184,184, 0.5) 21%, rgba(207,207,207, 0.5) 61%);
+background-image: -webkit-linear-gradient(bottom, rgba(183,184,184, 0.5) 21%, rgba(207,207,207, 0.5) 61%);
+background-image: -ms-linear-gradient(bottom, rgba(183,184,184, 0.5) 21%, rgba(207,207,207, 0.5) 61%);
+
+background-image: -webkit-gradient(
+	linear,
+	left bottom,
+	left top,
+	color-stop(0.21, rgba(183,184,184, 0.5)),
+	color-stop(0.61, rgba(207,207,207, 0.5))
+);
+}
+
 .mw_editor_btn_active{
   box-shadow:inset 0 0 4px #ccc;
 }
@@ -658,12 +676,114 @@ outline:1px solid #D4D4D4;
 .mw_editor_underline .ico{background-position: -150px 6px;}
 
 .mw_editor_font_color  .ico {background-position: -181px 3px;width: 33px;}
+.mw_editor_font_background_color  .ico {background-position: -215px 6px;width: 33px;}
 
 .mw_editor_undo .ico{background-position: -12px 4px;}
 .mw_editor_redo .ico{background-position: -42px 4px;}
+.mw_editor_justifyleft .ico{background-position: -525px 4px;}
+.mw_editor_justifycenter .ico{background-position: -551px 4px;}
+.mw_editor_justifyright .ico{background-position: -577px 4px;}
+.mw_editor_justifyfull .ico{background-position: -603px 4px;}
+.mw_editor_ul .ico{background-position: -427px 4px;}
+.mw_editor_ol .ico{background-position: -401px 4px;}
+.mw_editor_indent .ico{background-position: -452px 4px;}
+.mw_editor_outdent .ico{background-position: -479px 4px;}
+
+
+
+
+
 
 
 .mw_editor_element .ico{background-position: -637px 4px;}
+
+
+
+.wysiwyg_checker{
+  display: none;;
+}
+
+/* dropdowns */
+.mw_dropdown_type_wysiwyg {
+    height:25px;
+    width: 75px;
+    border:1px solid transparent;
+    color: #595959;
+-webkit-border-radius: 3px;
+-moz-border-radius: 3px;
+border-radius: 3px;
+}
+
+.mw_dropdown_type_wysiwyg:hover{
+  border-color:#D2D2D2;
+background-image: linear-gradient(bottom, rgb(229,229,229) 1%, rgb(243,243,243) 51%);
+background-image: -o-linear-gradient(bottom, rgb(229,229,229) 1%, rgb(243,243,243) 51%);
+background-image: -moz-linear-gradient(bottom, rgb(229,229,229) 1%, rgb(243,243,243) 51%);
+background-image: -webkit-linear-gradient(bottom, rgb(229,229,229) 1%, rgb(243,243,243) 51%);
+background-image: -ms-linear-gradient(bottom, rgb(229,229,229) 1%, rgb(243,243,243) 51%);
+
+background-image: -webkit-gradient(
+	linear,
+	left bottom,
+	left top,
+	color-stop(0.01, rgb(229,229,229)),
+	color-stop(0.51, rgb(243,243,243))
+);
+}
+
+.mw_dropdown_type_wysiwyg ul{
+  padding: 0;
+  margin: 0;
+}
+
+.mw_dropdown_type_wysiwyg a{
+  color: #595959;
+  text-decoration: none;
+  font-size: 11px;
+  display: block;
+  padding: 2px 10px;
+}
+.mw_dropdown_type_wysiwyg a:hover{
+  background: #F0F0F0;
+}
+
+.mw_dropdown_type_wysiwyg .mw_dropdown_val{
+  background: url(../img/dd_wysiwyg_arr.png) no-repeat right center;
+  padding: 6px;
+  width:63px;
+}
+
+.mw_dropdown_type_wysiwyg .mw_dropdown_fields{
+  top: 22px;
+}
+
+.mw_dropdown_type_wysiwyg .mw_dropdown_fields ul{
+  width: 200px;
+  padding: 5px 0;
+  border:1px solid #D2D2D2;
+  box-shadow:inset -2px -2px 2px #F6F6F6;
+  -webkit-border-radius: 3px;
+-moz-border-radius: 3px;
+border-radius: 3px;
+ background: white;
+}
+
+
+.mw_dropdown_action_font_size{
+  width: 40px;
+}
+
+.mw_dropdown_action_font_size .mw_dropdown_val{
+  width: 26px;
+}
+.mw_dropdown_action_font_size .mw_dropdown_fields ul{
+  width: 39px;
+}
+
+
+
+
+
 
 /*  End WYSIWYG  */
 
